--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-*,
-*:before,
-*:after{
+*{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 body{
     background: #ee0979;  /* fallback for old browsers */
@@ -23,68 +21,29 @@ body{
     background-color: #080808;
     padding: 30px 25px;
     border-radius: 8px;
-    box-shadow: 0 15px 20px rgba(0,0,0,0.3);
     margin-bottom: 50px;
 }
 .ageClc input,
 .ageClc button{
-    height: 50px;
-    background-color: #ffffff;
-    color: #080808;
+
     font-weight: 500;
     border-radius: 5px;
 }
 .ageClc input{
-    width: 60%;
-    padding: 0 20px;
     font-size: 14px;
+    background-color: #ffffff;
+    color: #080808;
 }
 .ageClc button{
-    width: 30%;
-    float: right;
     cursor: pointer;
     background-color: #fff;
-    text-align: center;
     display: block;
-    position: relative;
     overflow: hidden;
-    /* border: 3px solid rgb(152 151 151 / 90%); */
-    box-shadow: inset 0 0 0 200px rgb(255 255 255 / 8%);
-    filter: drop-shadow(2px 4px 6px black);
-    z-index: 1;
 }
-.inputs-wrapper button .icon2 {
-    position: relative;
-    color: #262626;
-    transition: .5s;
-    z-index: 3;
-  }
-.inputs-wrapper button:hover .icon2 {
-    color: #fff;
-    transform: rotateY(360deg);
-  }
-  .inputs-wrapper button:before {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #ee0979;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #ff6a00, #ee0979);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #ff6a00, #ee0979);
-    transition: .5s;
-    z-index: 2;
-  }
-  .inputs-wrapper button:hover:before {
-    top: 0;
-  }
 
 
 .outputs-wrapper{
     width: 100%;
-    display: flex;
-    justify-content: space-between;
 }
 .outputs-wrapper div{
     height: 100px;
@@ -138,7 +97,7 @@ body{
 .logo1{
     width: 60px;
 }
-.commingSoon{
+.commingSoon, .clcBtn{
     border: none;
     outline: none;
     color: #000;
@@ -146,11 +105,14 @@ body{
     cursor: pointer;
     position: relative;
     z-index: 0;
-    border-radius: 8px;
-    font-size: 20px;
-    font-family: 'Pacifico', cursive;
+
 }
-.commingSoon:before {
+#looming{
+    font-family: 'Pacifico', cursive;
+        border-radius: 8px;
+    font-size: 20px;
+}
+.commingSoon:before, .clcBtn:before {
     content: '';
     background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
     position: absolute;
@@ -167,19 +129,19 @@ body{
     border-radius: 10px;
 }
 
-.commingSoon:active {
+.commingSoon:active, .clcBtn:active {
     color: #000
 }
 
-.commingSoon:active:after {
+.commingSoon:active:after, .clcBtn:active:after {
     background: #fff;
 }
 
-.commingSoon:hover:before {
+.commingSoon:hover:before, .clcBtn:hover:before {
     opacity: 1;
 }
 
-.commingSoon:after {
+.commingSoon:after, .clcBtn:after {
     z-index: -1;
     content: '';
     position: absolute;
